Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-22956

[Reg 4.9 -> 4.10] Executing additional make build steps from subprojects context menu does not work anymore

    XMLWordPrintable

Details

    • Windows
    • 425732f810da228a439952c03fdde22ee948c5cf (qt-creator/qt-creator/4.11)

    Description

      See also comments in: https://forum.qt.io/topic/106818/newest-qtcreator-4-10-0-does-not-execute-all-build-steps-anymore-when-building-through-context-menu/8

      In my Qmake project where I develop a set of shared libraries, I used to right click on the corresponding subdir and issue a build or rebuild from there.

      QTCreator then used to perform all my build steps that I configured for the current configuration. Usually

      • qmake
      • make
      • make install

      Now with the latest release 4.10, when I build that way from the context menu, it only runs

      • qmake
      • make

      When I hit the build button in the lower left corner of the IDE however, it executes all build steps but of course for the whole project, not only for the subdir project.

      I attached a minimal example which reproduces the behaviour.

      What I learned from the forums was, that the issue exists for "additional make steps" and "custom build steps" are not affected.

      Attachments

        Issue Links

          No reviews matched the request. Check your Options in the drop-down menu of this sections header.

          Activity

            People

              kandeler Christian Kandeler
              darkmattercoder Jochen Bauer
              Votes:
              0 Vote for this issue
              Watchers:
              4 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Gerrit Reviews

                  There are no open Gerrit changes