QMake: Let the user decide whether to run a make step for subdir builds

Amends 66237a6e04.

Fixes: QTCREATORBUG-22956
Change-Id: I1c611a281eb0c2bad1f066a9753e685595b1eee1
Reviewed-by: Joerg Bornemann <joerg.bornemann@qt.io>
Reviewed-by: Leena Miettinen <riitta-leena.miettinen@qt.io>